--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
                 <option>11</option>
                 <option>12</option>
                 <option>13</option>
+                <option>14</option>
+                <option>15</option>
+                <option>16</option>
+                <option>17</option>
+                <option>18</option>
+                <option>19</option>
+                <option>20</option>
+                <option>21</option>
+                <option>22</option>
+                <option>23</option>
+                <option>24</option>
+                <option>25</option>
                 <option>26</option>
                 <option>-3</option>
                 <option>-26</option>
@@ -76,6 +88,18 @@
                 <option>11</option>
                 <option>12</option>
                 <option>13</option>
+                <option>14</option>
+                <option>15</option>
+                <option>16</option>
+                <option>17</option>
+                <option>18</option>
+                <option>19</option>
+                <option>20</option>
+                <option>21</option>
+                <option>22</option>
+                <option>23</option>
+                <option>24</option>
+                <option>25</option>
                 <option>26</option>
                 <option>-3</option>
                 <option>-26</option>
@@ -115,6 +139,18 @@
                 <option>11</option>
                 <option>12</option>
                 <option>13</option>
+                <option>14</option>
+                <option>15</option>
+                <option>16</option>
+                <option>17</option>
+                <option>18</option>
+                <option>19</option>
+                <option>20</option>
+                <option>21</option>
+                <option>22</option>
+                <option>23</option>
+                <option>24</option>
+                <option>25</option>
                 <option>26</option>
                 <option>-3</option>
                 <option>-26</option>
@@ -154,6 +190,18 @@
                 <option>11</option>
                 <option>12</option>
                 <option>13</option>
+                <option>14</option>
+                <option>15</option>
+                <option>16</option>
+                <option>17</option>
+                <option>18</option>
+                <option>19</option>
+                <option>20</option>
+                <option>21</option>
+                <option>22</option>
+                <option>23</option>
+                <option>24</option>
+                <option>25</option>
                 <option>26</option>
                 <option>-3</option>
                 <option>-26</option>
